install(FILES
    dsice/dsice.h
    dsice/d_spline.h
    dsice/d_spline.hpp
    dsice/equally_spaced_d_spline.hpp
    dsice/dsice_database_metric_type.hpp
    dsice/dsice_execution_mode.hpp
    dsice/dsice_tuner.hpp
    dsice/dsice_supercomputers.hpp
    dsice/dsice_process_manager.hpp
    dsice/dsice_process_agent.hpp
    DESTINATION include
)
